--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,20 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
+
+# Build Outputs
+.next/
+out/
+build
+dist
 
 # typescript
 *.tsbuildinfo
