--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "argon2": "^0.40.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
